Bug 91248: LDAP referrals hangs browser. r=dmose, sr=bienvenu, patch=leif.